<resources>
    <string name="app_name">Mr.Farmer Grocer</string>

    <!-- Jing Hui -->
    <string name="rect1">rect1</string>
    <string name="rect2">rect2</string>
    <string name="cart">cart</string>
    <string name="prodQty">1</string>
    <string name="heart">heart</string>

    <string name="tomato">Tomato</string>
    <string name="price">RM %1$.2f</string>
    <string name="weight">(%1$s)</string>
    <string name="stock">In Stock (%1$d)</string>
    <string name="relatedProd">Related Products</string>
    <string name="tnc">Terms Condition</string>
    <string name="totalItem">%1$d item(s)</string>
    <string name="total">Total:</string>
    <string name="my_cart">My Cart</string>
    <string name="emptyCart"><u>Clear the Cart</u></string>


    <!--Database-->
    <string name="url_server">https://mr-farmer-grocer.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_product_read">product/read.php</string>
    <string name="url_user_create">user/create.php</string>


    <!-- Chia Ling -->
    <string name="door_delivery">Door Delivery</string>
    <string name="self_pickup">Self-Pickup</string>
    <string name="credit_card">Credit/Debit Card</string>
    <string name="cod">Cash on Delivery</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_no">Card Number</string>
    <string name="expiry_date">Expiration Date(MM/YYYY)</string>
    <string name="cvv">CVV</string>
    <string name="otp">One Time Password(OTP)</string>

    <!-- Mei Siew -->
    <string name="my_fav">Favourite</string>

    <!-- Tze Wei -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>