<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MyCartActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/myCart"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:text="@string/my_cart"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myCart"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        app:srcCompat="@drawable/swipe_instru" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="15dp"
        android:paddingBottom="90dp"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-80dp" />

    <TextView
        android:id="@+id/bottom_rect"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/item_rect"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/totalItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bottom_rect"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="sans-serif"
        android:text="@string/totalItem"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bottom_rect"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="18dp"
        android:fontFamily="sans-serif"
        android:text="@string/total"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/totalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bottom_rect"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="22sp" />

    <Button
        android:id="@+id/chkoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bottom_rect"
        android:layout_alignEnd="@+id/bottom_rect"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@+id/totalprice"
        android:background="@drawable/chkout_btn" />


</RelativeLayout>