<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="13dp"
    android:background="@drawable/item_rect">

    <LinearLayout
        android:id="@+id/view_foreground"
        android:visibility="visible"
        android:background="@color/white"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cart_item_image"
            android:scaleType="fitXY"
            android:layout_width="100dp"
            android:layout_height="match_parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cart_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/tomato"
                android:textSize="20sp"
                android:textStyle="bold"
                android:maxWidth="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cart_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cart_item_name" />

            <TextView
                android:id="@+id/qtyrect"
                android:layout_width="47dp"
                android:layout_height="32dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/qty_rect"
                android:gravity="center"
                android:text="@string/prodQty"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/plusBtn"
                android:layout_width="46dp"
                android:layout_height="44dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/plus_qty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/qtyrect"
                app:layout_constraintHorizontal_bias="0.636"
                app:layout_constraintStart_toEndOf="@+id/cart_item_name" />

            <Button
                android:id="@+id/minusBtn"
                android:layout_width="47dp"
                android:layout_height="46dp"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="7dp"
                android:alpha="0.5"
                android:background="@drawable/minus_qty"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/qtyrect" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>